<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.hucompute.textimager.uima</groupId>
    <artifactId>crf2o</artifactId>
    <version>0.0.1</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <ttlab.duui.version>f68ca579ab553074f76d061623dc9b00cf508276</ttlab.duui.version>
        <ttlab.textimager.typesystem.version>b10db8275163d19d63b9512cc20ca5872e52499b</ttlab.textimager.typesystem.version>
        <ttlab.typesystem.version>b89f2d93516d2c07c66ebca6c7c7f92533cad1bd</ttlab.typesystem.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>3.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-document-annotation</artifactId>
            <version>3.5.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>1.3</version>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-xmi-asl</artifactId>
            <version>2.2.0</version>
        </dependency>

    </dependencies>
</project>